// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationInfo does not display a comma when page info or artid is not available 1`] = `
<span>
  <JournalInfo
    info={
      Immutable.Map {
        "journal_title": "Test Journal",
        "journal_issue": 2,
      }
    }
  />
</span>
`;

exports[`PublicationInfo does not render material if it is publication 1`] = `
<span>
  <JournalInfo
    info={
      Immutable.Map {
        "journal_title": "Test Journal",
        "material": "publication",
      }
    }
  />
</span>
`;

exports[`PublicationInfo renders either page start/end or artid 1`] = `
<span>
  <JournalInfo
    info={
      Immutable.Map {
        "journal_title": "Test Journal",
        "page_start": 1,
        "page_end": 10,
        "artid": 123,
        "journal_issue": 2,
      }
    }
  />
  <span>
    ,
  </span>
  <span>
     
    1-10
  </span>
</span>
`;

exports[`PublicationInfo renders only page_start when page_end is not available 1`] = `
<span>
  <JournalInfo
    info={
      Immutable.Map {
        "journal_title": "Test Journal",
        "page_start": 1,
        "artid": 123,
        "journal_issue": 2,
      }
    }
  />
  <span>
    ,
  </span>
  <span>
     
    1
  </span>
</span>
`;

exports[`PublicationInfo renders with journal_title and alll others fields 1`] = `
<span>
  <JournalInfo
    info={
      Immutable.Map {
        "journal_title": "Test Journal",
        "journal_volume": "TV",
        "year": 2016,
        "page_start": "1",
        "page_end": "2",
        "artid": "012345",
      }
    }
  />
  <span>
     
    1-2
  </span>
</span>
`;

exports[`PublicationInfo renders with journal_title and alll others fields 2`] = `
<span>
  <JournalInfo
    info={
      Immutable.Map {
        "journal_title": "Test Journal",
        "journal_volume": "TV",
        "year": 2016,
        "page_start": "1",
        "page_end": "2",
        "artid": "012345",
        "pubinfo_freetext": "Test. Pub. Info. Freetext",
      }
    }
  />
  <span>
     
    1-2
  </span>
</span>
`;

exports[`PublicationInfo renders with journal_title present 1`] = `
<span>
  <JournalInfo
    info={
      Immutable.Map {
        "journal_title": "Test Journal",
      }
    }
  />
</span>
`;

exports[`PublicationInfo renders with material 1`] = `
<span>
  <JournalInfo
    info={
      Immutable.Map {
        "journal_title": "Test Journal",
        "material": "erratum",
      }
    }
  />
  <span>
     (
    erratum
    )
  </span>
</span>
`;

exports[`PublicationInfo renders with pubinfo_freetext 1`] = `
<span>
  Test. Pub. Info. Freetext
</span>
`;

exports[`PublicationInfo renders without pubinfo_freetext or journal_title 1`] = `""`;
